fix: search scrollbar not visible when no editor is opened

--- a/static/css/parts/ViewletExtensions.css
+++ b/static/css/parts/ViewletExtensions.css
@@ -192,28 +192,3 @@
 .Extensions.Small .ExtensionListItemIcon {
   display: none;
 }
-
-/* TODO duplicate code with editor */
-
-.ScrollBar,
-.ScrollBarSmall {
-  position: absolute;
-  right: 0;
-  top: 0;
-  width: 14px;
-  bottom: 0;
-  contain: strict;
-  cursor: default;
-}
-
-.ScrollBarSmall {
-  width: 10px;
-}
-
-.ScrollBarThumb {
-  width: 100%;
-  /* height: 40px; */
-  position: absolute;
-  contain: strict;
-  background: var(--EditorScrollBarBackground, rgba(57, 71, 71, 0.6));
-}
