--- a/static/css/parts/ViewletKeyBindings.css
+++ b/static/css/parts/ViewletKeyBindings.css
@@ -80,31 +80,6 @@
   contain: content;
 }
 
-/* TODO duplicate code with editor */
-
-.ScrollBar,
-.ScrollBarSmall {
-  position: absolute;
-  right: 0;
-  top: 0;
-  width: 14px;
-  bottom: 0;
-  contain: strict;
-  cursor: default;
-}
-
-.ScrollBar {
-  width: 14px;
-}
-
-.ScrollBarThumb {
-  width: 100%;
-  /* height: 40px; */
-  position: absolute;
-  contain: strict;
-  background: var(--EditorScrollBarBackground, rgba(57, 71, 71, 0.6));
-}
-
 .Resizer {
   cursor: ew-resize;
   position: absolute;
